@@ -84,9 +84,9 @@ class GUI_API_EXPORT IconManager : public QObject
             DEF_ICON(DATABASE_EXPORT_WIZARD,            "database_export_wizard")
             DEF_ICON(DATABASE_FILE,                     "database_file")
             DEF_ICON(DATABASE_IMPORT_WIZARD,            "database_import_wizard")
-            DEF_ICO2(DATABASE_INVALID,                  DATABASE, WARNING)
             DEF_ICON(DATABASE_NETWORK,                  "database_network")
             DEF_ICON(DATABASE_OFFLINE,                  "database_offline")
+            DEF_ICO2(DATABASE_INVALID,                  DATABASE_OFFLINE, WARNING)
             DEF_ICON(DATABASE_ONLINE,                   "database_online")
             DEF_ICON(DATABASE_RELOAD,                   "database_reload")
             DEF_ICON(DDL_HISTORY,                       "ddl_history")
