@@ -38,7 +38,6 @@
         <file>img/database_disconnect.png</file>
         <file>img/database_export.png</file>
         <file>img/database_file.png</file>
-        <file>img/database_invalid.png</file>
         <file>img/database_network.png</file>
         <file>img/database_reload.png</file>
         <file>img/database.png</file>
